force-app/main/default/objects/Account/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount field used for Account Rollup hierarchy</description>
    <inlineHelpText>Amount field used for Account Rollup hierarchy</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>