force-app/main/default/objects/Account/fields/Contact_Associated__c.field-meta.xml
<CustomField>
    <fullName>Contact_Associated__c</fullName>
    <description>Contacts associated with the account</description>
    <inlineHelpText>Contacts associated with the account</inlineHelpText>
    <label>Contact Associated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>